fix: contact images offscreen on phone

--- a/styles.css
+++ b/styles.css
@@ -92,3 +92,12 @@ main{
   }
 }
 
+@media screen and (max-width: 577px) {
+  main {
+    margin-left: 0;
+  }
+
+  figure a img {
+    margin-right: 20px;
+  }
+}
